--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
       <input type="text" name="input" value="">
       <input type="textfield" name="input" value="">
 
-      <a href="http://google.com">link to google</a>
+      <a href="http://google.com">this is a link to google</a>
 
-      <a target="_blank" ref='http://purple.com'><div id = 'purple'></div></a>
+        <h1><a href="http://yahoo.com">link to lame yahoo</a></h1>
+
+
+        <a target="_blank" href="http://purple.com"><div id="purple"></div></a>
 
       <h1 id='anotherh1'>This is another h1</h1>
 
