created my first webpage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
       <p>
-        this is a paragraph
+        Welcome to my shitty beginning to web dev
       </p>
       <h1 style='color: red; text-align: center'>This is h1</h1>
       <h1>this should be ugly red</h1>
